# math

./: .gitignore  README.md  license.txt
doc/: macro.html
doc/homography/: 1st-cfs.c  construct-practical.max  construct.max  fundamental.html  nhd.html
example/: CMakeLists.txt  make.bat  make.sh  makeCmake.bat  makeVS2017.bat  makeVS2022.bat  make_cmake.bat  readme.cpp  readme.md  run.sh  sandbox.cpp
example/check/: CMakeLists.txt  make.bat  make.sh  run.sh
example/check/algorithm/: CMakeLists.txt  combination_test.cpp  make.bat  make.sh  run.sh  variation_test.cpp
example/check/complex/: CMakeLists.txt  make.bat  make.sh  quaternion.cpp
example/check/function/: CMakeLists.txt  bais.cpp  clamper_test.cpp  distribution.cpp  factorial.cpp  gabor.cpp  gain.cpp  gcd.cpp  hilbertOCV_test.cpp  hilbert_test.cpp  lebesgue_test.cpp  make.bat  make.sh  peano_test.cpp  power.cpp  run.sh  val.cpp  vap.cpp
example/check/geometry/: CMakeLists.txt  coord.cpp  make.bat  make.sh  run.sh
example/check/geometry/circle/: CMakeLists.txt  check.cpp  test.cpp
example/check/geometry/direction/: CMakeLists.txt  check.cpp  test.cpp  testOCV.cpp
example/check/geometry/ellipse/: CMakeLists.txt  check.cpp  make.sh  test.cpp
example/check/geometry/interval/: CMakeLists.txt  check.cpp  make.sh  test.cpp
example/check/geometry/plane/: CMakeLists.txt  check.cpp  convert.cpp  test.cpp
example/check/geometry/projective/: CMakeLists.txt  check.cpp  make.bat  make.sh  test.cpp
example/check/geometry/projective/camera/: CMakeLists.txt  check.cpp  focus.cpp  frustum.cpp  make.bat  make.sh  rectify.cpp  rectifycv.cpp  run.sh  window.cpp
example/check/geometry/quadric/: CMakeLists.txt  make.bat  make.sh  test.cpp
example/check/geometry/tetrahedron/: CMakeLists.txt  check.cpp  test.cpp
example/check/geometry/triangle/: CMakeLists.txt  check.cpp  make.bat  test.cpp
example/check/linear/: CMakeLists.txt  make.bat  make.sh
example/check/linear/affine/: CMakeLists.txt  check.cpp  make.sh
example/check/linear/homography/: CMakeLists.txt  check.cpp  check2.cpp  conf.cpp  make.bat  make.sh  test.cpp
example/check/linear/matrix/: CMakeLists.txt  check.cpp  eigen_test.cpp  invert_test.cpp  make.bat  make.sh  matrix.sln  matrix.vcxproj  matrix.vcxproj.filters  test.cpp
example/check/linear/vector/: CMakeLists.txt  check.cpp  test.cpp
example/check/polynomial/: CMakeLists.txt  evaluate.cpp  fit.cpp  make.bat  make.sh  normalize.cpp  optimize.cpp
example/check/polynomial/cubic/: CMakeLists.txt  evaluate.cpp  interpolate.cpp  solve.cpp
example/check/polynomial/interpolate/: CMakeLists.txt  make.bat  make.sh  test.cpp
example/check/polynomial/linear/: CMakeLists.txt  evaluate.cpp  interpolate.cpp  solve.cpp
example/check/polynomial/quadric/: CMakeLists.txt  evaluate.cpp  interpolate.cpp  solve.cpp
example/check/polynomial/quartic/: CMakeLists.txt  evaluate.cpp  interpolate.cpp  solve.cpp
example/check/polynomial/solve/: CMakeLists.txt  check.cpp  test.cpp
example/check/random/: CMakeLists.txt  congruent_test.cpp  make.bat  make.sh  sobol_test.cpp
example/check/statistic/: CMakeLists.txt  check.cpp  gauss.cpp  make.bat  make.sh  test.cpp
example/check/topology/: CMakeLists.txt  SVG.hpp  make.bat  make.sh  test.cpp
example/test/: make.sh
example/test/codeblocks/: main.cpp  math.cbp  math.layout
example/test/msvc/2015/: math2015.sln  math2015.vcxproj  (+1 more)
src/math/: constants.hpp  math.hpp
src/math/algorithm/: algorithm.hpp  bmp.hpp  combination.hpp  index.hpp  variation.hpp
src/math/complex/: complex.hpp
src/math/function/: bais.hpp  binomial.hpp  clamper.hpp  combinations.hpp  convex.hpp  factorial.hpp  function.hpp  gabor.hpp  gain.hpp  gcd.hpp  hilbert.hpp  hilbert2D.hpp  hilbert3D.hpp  hilbertND.hpp  lcm.hpp  lebesgue.hpp  lebesgue2D.hpp  lebesgueND.hpp  moore2D.hpp  moore3D.hpp  mooreND.hpp  pdf.hpp  peano2D.hpp  peano3D.hpp  peanoND.hpp  power.hpp  ricker.hpp  signum.hpp
src/math/geometry/: cartesian2cylindric.hpp  cartesian2polar.hpp  cartesian2spherical.hpp  cylindric2cartesian.hpp  cylindric2spherical.hpp  deg2gon.hpp  deg2rad.hpp  deg2slope.hpp  geometry.hpp  gon2deg.hpp  gon2rad.hpp  gon2slope.hpp  polar2cartesian.hpp  rad2deg.hpp  rad2gon.hpp  rad2slope.hpp  slope2deg.hpp  slope2gon.hpp  slope2rad.hpp  spherical2cartesian.hpp  spherical2cylindric.hpp
src/math/grammar/: fsm.hpp
src/math/linear/: linear.hpp
src/math/logic/: boolean.hpp
src/math/polynomial/: evaluate.hpp  monicize.hpp  normalize.hpp  optimize.hpp  polynomial.hpp  structure.hpp
src/math/random/: VaL.hpp  VaP.hpp  congruent.hpp  random.hpp  sobol1D.hpp  sobol2D.cpp  sobol2D.hpp  vdc.hpp
src/math/statistic/: average.hpp  count.hpp  gaussV.hpp  gaussV1.hpp  gaussV2.hpp  gaussV3.hpp  histogram.hpp  interval.hpp  maximum.hpp  minimum.hpp  skewness.hpp  statistic.hpp  summae.hpp
src/math/topology/: topology.hpp
src/math/type/: scalar.hpp  size.hpp  type.hpp
(+404 files in other folders)
