#cmake_minimum_required(VERSION 2.8)

add_executable(   MathFunctionBais                 bais.cpp )
add_executable(   MathFunctionClamper_Test         clamper_test.cpp )
add_executable(   MathFunctionDistribution         distribution.cpp )
add_executable(   MathFunctionFactorial            factorial.cpp )
add_executable(   MathFunctionGabor                gabor.cpp )
add_executable(   MathFunctionGain                 gain.cpp )
add_executable(   MathFunctionHilbert_Test         hilbert_test.cpp )
#add_executable(   MathFunctionHilbertOCV_Test      hilbertOCV_test.cpp )
add_executable(   MathFunctionLebesgue_Test        lebesgue_test.cpp )
add_executable(   MathFunctionPower                power.cpp )
add_executable(   MathFunctionVal                  val.cpp )
add_executable(   MathFunctionVap                  vap.cpp )

























