#cmake_minimum_required(VERSION 2.8)

add_executable(   Math_FunctionBais                 bais.cpp )
add_executable(   Math_FunctionClamper_Test         clamper_test.cpp )
add_executable(   Math_FunctionDistribution         distribution.cpp )
add_executable(   Math_FunctionFactorial            factorial.cpp )
add_executable(   Math_FunctionGabor                gabor.cpp )
add_executable(   Math_FunctionGain                 gain.cpp )
add_executable(   Math_FunctionHilbert_Test         hilbert_test.cpp )
#add_executable(   Math_FunctionHilbertOCV_Test      hilbertOCV_test.cpp )
add_executable(   Math_FunctionLebesgue_Test        lebesgue_test.cpp )
add_executable(   Math_FunctionPower                power.cpp )
add_executable(   Math_FunctionVal                  val.cpp )
add_executable(   Math_FunctionVap                  vap.cpp )
add_executable(   Math_FunctionGcd                  gcd.cpp )

