#cmake_minimum_required(VERSION 2.8)

add_subdirectory( circle )
add_subdirectory( direction )
add_subdirectory( ellipse )
add_subdirectory( interval )
add_subdirectory( plane )
add_subdirectory( projective )
add_subdirectory( quadric )
add_subdirectory( tetrahedron )
add_subdirectory( triangle )

add_executable(   Math_Geometry_Coord              coord.cpp )

























