#cmake_minimum_required(VERSION 2.8)


add_executable(   MathLinearMatrix__check             check.cpp )
add_executable(   MathLinearMatrix__eigen_test             eigen_test.cpp )
add_executable(   MathLinearMatrix__invert_test             invert_test.cpp )
add_executable(   MathLinearMatrix__test             test.cpp )
