#cmake_minimum_required(VERSION 2.8)


add_executable(   Math_Linear_Matrix__check             check.cpp )
add_executable(   Math_Linear_Matrix__eigen_test             eigen_test.cpp )
add_executable(   Math_Linear_Matrix__invert_test             invert_test.cpp )
add_executable(   Math_Linear_Matrix__test             test.cpp )
