#cmake_minimum_required(VERSION 2.8)

add_executable(  MathGeometryProjectiveCameraCheck              check.cpp )
add_executable(  MathGeometryProjectiveCameraFocus              focus.cpp )
add_executable(  MathGeometryProjectiveCameraFrustum              frustum.cpp )
add_executable(  MathGeometryProjectiveCameraRectify              rectify.cpp )























