#cmake_minimum_required(VERSION 2.8)

add_executable(  Math_Geometry_Projective_CameraCheck              check.cpp )
add_executable(  Math_Geometry_Projective_CameraFocus              focus.cpp )
add_executable(  Math_Geometry_Projective_CameraFrustum              frustum.cpp )
add_executable(  Math_Geometry_Projective_CameraRectify              rectify.cpp )
add_executable(  Math_Geometry_Projective_Camera_Window              window.cpp )























